--- a/src/header.html
+++ b/src/header.html
@@ -24,7 +24,7 @@
 						<div class="userlogre right">
 							<span class="welcome">hi，欢迎来我买网!</span>
 							<span class="wellogre">
-							<a href="#">登录</a>
+							<a href="http://10.31.162.56/js/shangke/projectname/src/login.html">登录</a>
 							<a href="#">注册</a>
 						</span>
 						</div>
@@ -119,7 +119,7 @@
 
 					<!--表单-->
 					<div class="form">
-						<form>
+						<form autocomplete="off">
 							<span class="search_p"></span>
 							<input type="text" name="tokeyword" id="tokeyword" value="闹元宵第2件0元  拼手气最高得￥188大红包" />
 							<input type="button" name="search" id="search" value="搜索" />
