--- a/src/registor.html
+++ b/src/registor.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Document</title>
+	<title>填写信息,会员注册</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css"/>
 		<link rel="stylesheet" type="text/css" href="css/scss.css"/>
 </head>
@@ -33,7 +33,7 @@
 				<div class="boxborder">
 					<div class="logincontent">
 						<div class="loginbox">
-							<form>
+							<form id="regform">
 								<div class="regbox">
 									<label for="regphone">邮箱/手机号</label>
 									<input type="text" name="regphone" id="regphone"/>
@@ -73,5 +73,8 @@
 	
 	<!--底部-->
 	<div class="regfooter"></div>
+	<script src="script/thirdplugins/jquery.js"></script>
+	<script src="script/thirdplugins/jquery.validate.js"></script>
+	<script src="script/js/registor.js"></script>
 </body>
 </html>
